--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,7 @@ html, body {
     padding: .5em;
     color: white;
     text-decoration: none;
+    font-weight: bolder;
 }
 
 .main-nav {
@@ -57,6 +58,7 @@ html, body {
     background-blend-mode: multiply;
     background-size: cover;
     padding-bottom: 30px;
+    background-color: #56CCF2;
 }
 
 .band-name {
@@ -66,6 +68,7 @@ html, body {
     font-family: "Booter - Zero Zero";
     font-weight: normal;
     color: white;
+  
 }
 
 .band-name-large {
